--- a/action.yml
+++ b/action.yml
@@ -10,7 +10,7 @@ inputs:
   baseUrl:
     description: The base URL used to communicate with the GitHub API (To enable support for GitHub Enterprise)
     required: false
-    default: "https://api.github.com"
+    default: ${{ github.api_url }}
 
   sarifReportDir:
     description: The CodeQL output directory for SARIF report(s).
